--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -32,9 +32,9 @@ The disputes extrinsic, $\xtdisputes$, may contain one or more verdicts $\xtverd
 \begin{equation}
   \begin{aligned}
     \xtdisputes &\equiv (\xtverdicts, \xtculprits, \xtfaults) \\
-    \where \xtverdicts &\in \seq{\tup{\H, \ffrac{\tau}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\\
-    \also \xtculprits &\in \seq{\H, \H_E, \mathbb{E}} \,,\quad
-    \xtfaults \in \seq{\H, \{\top,\bot\}, \H_E, \mathbb{E}}
+    \where \xtverdicts &\in \seq{\tup{\hash, \ffrac{\tau}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\\
+    \also \xtculprits &\in \seq{\hash, \hash_E, \mathbb{E}} \,,\quad
+    \xtfaults \in \seq{\hash, \{\top,\bot\}, \hash_E, \mathbb{E}}
   \end{aligned}
 \end{equation}
 
@@ -82,7 +82,7 @@ The judgments of all verdicts must be ordered by validator index and there may b
 
 We define $\verdicts$ to derive from the sequence of verdicts introduced in the block's extrinsic, containing only the report hash and the sum of positive judgments. We require this total to be either exactly two-thirds-plus-one, zero or one-third of the validator set indicating, respectively, that the report is good, that it's bad, or that it's wonky.\footnote{This requirement may seem somewhat arbitrary, but these happen to be the decision thresholds for our three possible actions and are acceptable since the security assumptions include the requirement that at least two-thirds-plus-one validators are live (\cite{cryptoeprint:2024/961} discusses the security implications in depth).} Formally:
 \begin{align}\label{eq:verdicts}
-  \verdicts &\in \seq{\tup{\H, \{0, \floor{\nicefrac{1}{3}\mathsf{V}}, \floor{\nicefrac{2}{3}\mathsf{V}} + 1\}}} \\
+  \verdicts &\in \seq{\tup{\hash, \{0, \floor{\nicefrac{1}{3}\mathsf{V}}, \floor{\nicefrac{2}{3}\mathsf{V}} + 1\}}} \\
   \verdicts &= \sq{\tup{r, \sum_{\tup{v, i, s} \in \mathbf{j}}\!\!\!\! v}\ \middle\mid\ \tup{r, a, \mathbf{j}} \orderedin \xtverdicts}
 \end{align}
 
@@ -94,7 +94,7 @@ There are some constraints placed on the composition of this extrinsic: any verd
 
 We clear any work-reports which we judged as uncertain or invalid from their core:
 \begin{equation}\label{eq:removenonpositive}
-  \forall c \in \N_\mathsf{C} : \rho^\dagger[c] = \begin{cases}
+  \forall c \in \coreindex : \rho^\dagger[c] = \begin{cases}
     \none &\!\!\!\!\when \{ (\blake(\rho[c]_w), t) \in \verdicts, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
     \rho[c] &\!\!\!\!\otherwise
   \end{cases}\!\!\!\!\!\!\!
@@ -112,5 +112,5 @@ The state's good-set, bad-set and wonky-set assimilate the hashes of the reports
 
 The offenders markers must contain exactly the keys of all new offenders, respectively. Formally:
 \begin{align}
-  \mathbf{H}_o &\equiv \sq{ k \mid (r, k, s) \in \xtculprits} \frown \sq{ k \mid (r, v, k, s) \in \xtfaults }
+  \H_\¬offendersmark &\equiv \sq{ k \mid (r, k, s) \in \xtculprits} \frown \sq{ k \mid (r, v, k, s) \in \xtfaults }
 \end{align}
