--- a/text/overview.tex
+++ b/text/overview.tex
@@ -11,9 +11,9 @@ Broadly speaking, \Jam (and indeed blockchains in general) may be defined simply
 
 \subsection{The Block}
 
-To aid comprehension and definition of our protocol, we partition as many of our terms as possible into their functional components. We begin with the block $\mathbf{B}$ which may be restated as the header $\mathbf{H}$ and some input data external to the system and thus said to be \emph{extrinsic}, $\mathbf{E}$:
+To aid comprehension and definition of our protocol, we partition as many of our terms as possible into their functional components. We begin with the block $\mathbf{B}$ which may be restated as the header $\H$ and some input data external to the system and thus said to be \emph{extrinsic}, $\mathbf{E}$:
 \begin{align}
-  \label{eq:block}\mathbf{B} &\equiv (\mathbf{H}, \mathbf{E}) \\
+  \label{eq:block}\mathbf{B} &\equiv (\theheader, \mathbf{E}) \\
   \label{eq:extrinsic}\mathbf{E} &\equiv (\xttickets, \xtdisputes, \xtpreimages, \xtassurances, \xtguarantees)
 \end{align}
 
@@ -46,29 +46,29 @@ Finally, details of the most recent blocks and timeslot index are tracked in $\r
 
 Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulating all items of posterior state in terms of the prior state and block. To aid the architecting of implementations which parallelize this computation, we minimize the depth of the dependency graph where possible. The overall dependency graph is specified here:
 \begin{align}\label{eq:transitionfunctioncomposition}
-  \tau' &\prec \mathbf{H} \\
-  \recenthistory^\dagger &\prec (\mathbf{H}, \recenthistory) \label{eq:betadagger} \\
-  \gamma' &\prec (\mathbf{H}, \tau, \xttickets, \gamma, \iota, \eta', \kappa', \psi') \\
-  \eta' &\prec (\mathbf{H}, \tau, \eta) \\
-  \kappa' &\prec (\mathbf{H}, \tau, \kappa, \gamma) \\
-  \lambda' &\prec (\mathbf{H}, \tau, \lambda, \kappa) \\
+  \tau' &\prec \theheader \\
+  \recenthistory^\dagger &\prec (\theheader, \recenthistory) \label{eq:betadagger} \\
+  \gamma' &\prec (\theheader, \tau, \xttickets, \gamma, \iota, \eta', \kappa', \psi') \\
+  \eta' &\prec (\theheader, \tau, \eta) \\
+  \kappa' &\prec (\theheader, \tau, \kappa, \gamma) \\
+  \lambda' &\prec (\theheader, \tau, \lambda, \kappa) \\
   \psi' &\prec (\xtdisputes, \psi) \\
   \rho^\dagger &\prec (\xtdisputes, \rho) \label{eq:rhodagger} \\
   \rho^\ddagger &\prec (\xtassurances, \rho^\dagger) \label{eq:rhoddagger} \\
   \rho' &\prec (\xtguarantees, \rho^\ddagger, \kappa, \tau') \label{eq:rhoprime} \\
   \mathbf{W}^* &\prec (\xtassurances, \rho') \\
   (\ready', \accumulated', \accountspostxfer, \privileges', \iota', \varphi', \lastaccout', \mathbf{I}, \mathbf{X}) &\prec (\mathbf{W}^*, \ready, \accumulated, \accountspre, \privileges, \iota, \varphi, \tau, \tau') \label{eq:accountspostxfer} \\
-  \recenthistory' &\prec (\mathbf{H}, \xtguarantees, \recenthistory^\dagger, \lastaccout') \label{eq:betaprime} \\
+  \recenthistory' &\prec (\theheader, \xtguarantees, \recenthistory^\dagger, \lastaccout') \label{eq:betaprime} \\
   \accountspostpreimage &\prec (\xtpreimages, \accountspostxfer, \tau') \label{eq:accountspostpreimage} \\
-  \authpool' &\prec (\mathbf{H}, \xtguarantees, \varphi', \authpool) \\
-  \pi' &\prec (\xtguarantees, \xtpreimages, \xtassurances, \xttickets, \tau, \kappa', \pi, \mathbf{H}, \mathbf{I}, \mathbf{X})\!\!\!\!\!\!\!\!
+  \authpool' &\prec (\theheader, \xtguarantees, \varphi', \authpool) \\
+  \pi' &\prec (\xtguarantees, \xtpreimages, \xtassurances, \xttickets, \tau, \kappa', \pi, \theheader, \mathbf{I}, \mathbf{X})\!\!\!\!\!\!\!\!
 \end{align}
 
 The only synchronous entanglements are visible through the intermediate components superscripted with a dagger and defined in equations \ref{eq:betadagger}, \ref{eq:rhodagger}, \ref{eq:rhoddagger}, \ref{eq:rhoprime}, \ref{eq:accountspostxfer}, \ref{eq:betaprime} and \ref{eq:accountspostpreimage}. The latter two mark a merge and join in the dependency graph and, concretely, imply that the availability extrinsic may be fully processed and accumulation of work happen before the preimage lookup extrinsic is folded into state.
 
 \subsection{Which History?}
 
-A blockchain is a sequence of blocks, each cryptographically referencing some prior block by including a hash of its header, all the way back to some first block which references the genesis header. We already presume consensus over this genesis header $\mathbf{H}^0$ and the state it represents already defined as $\thestate^0$.
+A blockchain is a sequence of blocks, each cryptographically referencing some prior block by including a hash of its header, all the way back to some first block which references the genesis header. We already presume consensus over this genesis header $\theheader^0$ and the state it represents already defined as $\thestate^0$.
 
 By defining a deterministic function for deriving a single posterior state for any (valid) combination of prior state and block, we are able to define a unique \emph{canonical} state for any given block. We generally call the block with the most ancestors the \emph{head} and its state the \emph{head state}.
 
@@ -102,9 +102,9 @@ In these cases, we define the best block as the head of the best chain, itself d
 
 The present work describes a crypto-economic system, \ie one combining elements of both cryptography and economics and game theory to deliver a self-sovereign digital service. In order to codify and manipulate economic incentives we define a token which is native to the system, which we will simply call \emph{tokens} in the present work.
 
-A value of tokens is generally referred to as a \emph{balance}, and such a value is said to be a member of the set of balances, $\N_B$, which is exactly equivalent to the set of naturals less than $2^{64}$ (\ie 64-bit unsigned integers in coding parlance). Formally:
+A value of tokens is generally referred to as a \emph{balance}, and such a value is said to be a member of the set of balances, $\balance$, which is exactly equivalent to the set of naturals less than $2^{64}$ (\ie 64-bit unsigned integers in coding parlance). Formally:
 \begin{align}\label{eq:balance}
-  \N_B \equiv \N_{2^{64}}
+  \balance \equiv \N_{2^{64}}
 \end{align}
 
 Though unimportant for the present work, we presume that there be a standard named denomination for $10^{9}$ tokens. This is different to both Ethereum (which uses a denomination of $10^{18}$), Polkadot (which uses a denomination of $10^{10}$) and Polkadot's experimental cousin Kusama (which uses $10^{12}$).
@@ -144,12 +144,12 @@ In the present work, we presume the definition of a \emph{Polkadot Virtual Machi
 
 The \textsc{pvm} is comparable to the \textsc{evm} defined in the Yellow Paper, but somewhat simpler: the complex instructions for cryptographic operations are missing as are those which deal with environmental interactions. Overall it is far less opinionated since it alters a pre-existing general purpose design, \textsc{risc-v}, and optimizes it for our needs. This gives us excellent pre-existing tooling, since \textsc{pvm} remains essentially compatible with \textsc{risc-v}, including support from the compiler toolkit \textsc{llvm} and languages such as Rust and C++. Furthermore, the instruction set simplicity which \textsc{risc-v} and \textsc{pvm} share, together with the register size (64-bit), active number (13) and endianness (little) make it especially well-suited for creating efficient recompilers on to common hardware architectures.
 
-The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for contextualization we will briefly summarize the basic invocation function $\Psi$ which computes the resultant state of a \textsc{pvm} instance initialized with some registers ($\lseq\N_R\rseq_{13}$) and \textsc{ram} ($\mathbb{M}$) and has executed for up to some amount of gas ($\N_G$), a number of approximately time-proportional computational steps:
+The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for contextualization we will briefly summarize the basic invocation function $\Psi$ which computes the resultant state of a \textsc{pvm} instance initialized with some registers ($\lseq\N_R\rseq_{13}$) and \textsc{ram} ($\mathbb{M}$) and has executed for up to some amount of gas ($\gas$), a number of approximately time-proportional computational steps:
 \begin{equation}
   \Psi\colon
   \tuple{\,
     \begin{alignedat}{3}
-      &\blob\ts\ \ \N_R\ts\ \ &&\N_G\ts\\
+      &\blob\ts\ \ \N_R\ts\ \ &&\gas\ts\\
       &\!\lseq\N_R\rseq_{13}\ts\ \ &&\mathbb{M}\\
     \end{alignedat}
   \,}
@@ -162,10 +162,10 @@ The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for 
   \,}
 \end{equation}
 
-We refer to the time-proportional computational steps as \emph{gas} (much like in the \emph{YP}) and limit it to a 64-bit quantity. We may use either $\N_G$ or $\Z_G$ to bound it, the first as a prior argument since it is known to be positive, the latter as a result where a negative value indicates an attempt to execute beyond the gas limit. Within the context of the \textsc{pvm}, $\gascounter \in \N_G$ is typically used to denote gas.
+We refer to the time-proportional computational steps as \emph{gas} (much like in the \emph{YP}) and limit it to a 64-bit quantity. We may use either $\gas$ or $\Z_G$ to bound it, the first as a prior argument since it is known to be positive, the latter as a result where a negative value indicates an attempt to execute beyond the gas limit. Within the context of the \textsc{pvm}, $\gascounter \in \gas$ is typically used to denote gas.
 \begin{equation}\label{eq:gasregentry}
   \Z_G \equiv \mathbb{Z}_{-2^{63}\dots2^{63}}\ ,\quad
-  \N_G \equiv \mathbb{N}_{2^{64}}\ ,\quad
+  \gas \equiv \mathbb{N}_{2^{64}}\ ,\quad
   \N_R \equiv \N_{2^{64}}
 \end{equation}
 
@@ -223,9 +223,9 @@ The Safrole mechanism subdivides time following genesis into fixed length \emph{
 
 This six-second slot period represents the minimum time between \Jam blocks, and through Safrole we aim to strictly minimize forks arising both due to contention within a slot (where two valid blocks may be produced within the same six-second period) and due to contention over multiple slots (where two valid blocks are produced in different time slots but with the same parent).
 
-Formally when identifying a timeslot index, we use a natural less than $2^{32}$ (in compute parlance, a 32-bit unsigned integer) indicating the number of six-second timeslots from the \Jam Common Era. For use in this context we introduce the set $\N_T$:
+Formally when identifying a timeslot index, we use a natural less than $2^{32}$ (in compute parlance, a 32-bit unsigned integer) indicating the number of six-second timeslots from the \Jam Common Era. For use in this context we introduce the set $\timeslot$:
 \begin{align}\label{eq:time}
-  \N_T \equiv \N_{2^{32}}
+  \timeslot \equiv \N_{2^{32}}
 \end{align}
 
 This implies that the lifespan of the proposed protocol takes us to mid-August of the year 2840, which with the current course that humanity is on should be ample.
