--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -55,17 +55,17 @@ We define the sequence serialization function $\se(\seq{T})$ for any $T$ which i
   \se([\mathbf{i}_0, \mathbf{i}_1, ...]) \equiv \se(\mathbf{i}_0) \concat \se(\mathbf{i}_1) \concat \dots
 \end{equation}
 
-Thus, conveniently, fixed length octet sequences (\eg hashes $\H$ and its variants) have an identity serialization.
+Thus, conveniently, fixed length octet sequences (\eg hashes $\hash$ and its variants) have an identity serialization.
 
 \subsubsection{Discriminator Encoding}
 When we have sets of heterogeneous items such as a union of different kinds of tuples or sequences of different length, we require a discriminator to determine the nature of the encoded item for successful deserialization. Discriminators are encoded as a natural and are encoded immediately prior to the item.
 
-We generally use a \emph{length discriminator} when serializing sequence terms which have variable length (\eg general blobs $\blob$ or unbound numeric sequences $\seq{\N}$) (though this is omitted in the case of fixed-length terms such as hashes $\H$).\footnote{Note that since specific values may belong to both sets which would need a discriminator and those that would not then we are sadly unable to introduce a function capable of serializing corresponding to the \emph{term}'s limitation. A more sophisticated formalism than basic set-theory would be needed, capable of taking into account not simply the value but the term from which or to which it belongs in order to do this succinctly.} In this case, we simply prefix the term its length prior to encoding. Thus, for some term $y \in \tup{x \in \blob, \dots}$, we would generally define its serialized form to be $\se(|x|)\concat\se(x)\concat\dots$. To avoid repetition of the term in such cases, we define the notation $\var{x}$ to mean that the term of value $x$ is variable in size and requires a length discriminator. Formally:
+We generally use a \emph{length discriminator} when serializing sequence terms which have variable length (\eg general blobs $\blob$ or unbound numeric sequences $\seq{\N}$) (though this is omitted in the case of fixed-length terms such as hashes $\hash$).\footnote{Note that since specific values may belong to both sets which would need a discriminator and those that would not then we are sadly unable to introduce a function capable of serializing corresponding to the \emph{term}'s limitation. A more sophisticated formalism than basic set-theory would be needed, capable of taking into account not simply the value but the term from which or to which it belongs in order to do this succinctly.} In this case, we simply prefix the term its length prior to encoding. Thus, for some term $y \in \tup{x \in \blob, \dots}$, we would generally define its serialized form to be $\se(|x|)\concat\se(x)\concat\dots$. To avoid repetition of the term in such cases, we define the notation $\var{x}$ to mean that the term of value $x$ is variable in size and requires a length discriminator. Formally:
 \begin{equation}
   \var{x} \equiv \tup{|x|, x}\text{ thus }\se(\var{x}) \equiv \se(|x|)\concat\se(x)
 \end{equation}
 
-We also define a convenient discriminator operator $\maybe{x}$ specifically for terms defined by some serializable set in union with $\none$ (generally denoted for some set $S$ as $S\bm{?}$):
+We also define a convenient discriminator operator $\maybe{x}$ specifically for terms defined by some serializable set in union with $\none$ (generally denoted for some set $S$ as $\optional{S}$):
 \begin{align}
   \maybe{x} \equiv \begin{cases}
     0 &\when x = \none \\
@@ -138,15 +138,15 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
 \newcommand*{\seresult}{O}
 \begin{align}
   \se(\mathbf{B}) &= \se\,\left\lparen
-    \mathbf{H},\ \se_T(\xttickets),\ \se_P(\xtpreimages),\ \se_G(\xtguarantees),\ \se_A(\xtassurances),\ \se_D(\xtdisputes)
+    \theheader,\ \se_T(\xttickets),\ \se_P(\xtpreimages),\ \se_G(\xtguarantees),\ \se_A(\xtassurances),\ \se_D(\xtdisputes)
   \right\rparen \\
   \se_T(\xttickets) &= \se(\var{\xttickets}) \\
   \se_P(\xtpreimages) &= \se(\var{[\tup{s, \var{p}} \mid \tup{s, p} \orderedin \xtpreimages]}) \\
   \se_G(\xtguarantees) &= \se(\var{[\tup{w, \se_4(t), \var{a}} \mid \tup{w, t, a} \orderedin \xtguarantees]}) \\
   \se_A(\xtassurances) &= \se(\var{[\tup{a, f, \se_2(v), s} \mid \tup{a, f, v, s} \orderedin \xtassurances]}) \\
   \se_D((\mathbf{v}, \mathbf{c}, \mathbf{f})) &= \se(\var{[(r, \se_4(a), [(v, \se_2(i), s) \mid (v, i, s) \orderedin \mathbf{j}]) \mid (r, a, \mathbf{j}) \orderedin \mathbf{v}]}, \var{\mathbf{c}}, \var{\mathbf{f}}) \\
-  \se(\mathbf{H}) &= \se_U(\mathbf{H})\concat\se(\mathbf{H}_s) \\
-  \se_U(\mathbf{H}) &= \se(\mathbf{H}_p,\mathbf{H}_r,\mathbf{H}_x)\concat\se_4(\h¬timeslot)\concat\se(\maybe{\mathbf{H}_e},\maybe{\mathbf{H}_w},\se_2(\mathbf{H}_i),\mathbf{H}_v,\var{\mathbf{H}_o})\\
+  \se(\mathbf{H}) &= \se_U(\mathbf{H})\concat\se(\H_\¬sealsig) \\
+  \se_U(\mathbf{H}) &= \se(\H_\¬parent,\H_\¬priorstateroot,\H_\¬extrinsichash)\concat\se_4(\H_\¬timeslot)\concat\se(\maybe{\H_\¬epochmark},\maybe{\H_\¬winnersmark},\se_2(\H_\¬authorindex),\H_\¬vrfsig,\var{\H_\¬offendersmark})\\
   \se(x \in \mathbb{X}) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\var{x_\mathbf{p}})\\
   \se(x \in \avspec) &\equiv \se(x_h) \concat \se_4(x_l)\concat\se(x_u, x_e) \concat \se_2(x_n) \\
   \se(x \in \mathbb{L}) &\equiv \se(\se_4(x_s), x_c, x_y, \se_8(x_g), x_u, x_i, x_x, x_z, x_e, \seresult(x_\wl¬result))\\
@@ -175,9 +175,9 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
     5 &\when o = \token{BAD} \\
     6 &\when o = \token{BIG} \\
   \end{cases}\\
-  \se_I(h \in \H \cup \H^\boxplus, i \in \N_{2^{15}}) &\equiv \begin{cases}
-    (h, \se_2(i)) &\when h \in \H\\
-    (r, \se_2(i + 2^{15})) &\when \exists r \in \H, h = r^\boxplus\\
+  \se_I(h \in \hash \cup \hash^\boxplus, i \in \N_{2^{15}}) &\equiv \begin{cases}
+    (h, \se_2(i)) &\when h \in \hash\\
+    (r, \se_2(i + 2^{15})) &\when \exists r \in \hash, h = r^\boxplus\\
   \end{cases}
 \end{align}
 
